compiler/testData/javaModules/dependencyOnStdlib/namedWithoutExplicitDependency.txt
compiler/testData/javaModules/dependencyOnStdlib/namedWithoutExplicitDependency/test.kt:1:20: error: symbol is declared in module 'kotlin.stdlib' which current module does not depend on
import kotlin.text.Regex
                   ^
compiler/testData/javaModules/dependencyOnStdlib/namedWithoutExplicitDependency/test.kt:3:27: error: symbol is declared in module 'kotlin.stdlib' which current module does not depend on
fun f1(): List<String?> = emptyList()
                          ^
compiler/testData/javaModules/dependencyOnStdlib/namedWithoutExplicitDependency/test.kt:4:17: error: symbol is declared in module 'kotlin.stdlib' which current module does not depend on
fun f2(): Array<Lazy<Unit>> = arrayOf()
                ^
compiler/testData/javaModules/dependencyOnStdlib/namedWithoutExplicitDependency/test.kt:4:22: error: symbol is declared in module 'kotlin.stdlib' which current module does not depend on
fun f2(): Array<Lazy<Unit>> = arrayOf()
                     ^
compiler/testData/javaModules/dependencyOnStdlib/namedWithoutExplicitDependency/test.kt:5:22: error: symbol is declared in module 'kotlin.stdlib' which current module does not depend on
fun f3(map: Map<Int, Regex>): Collection<Regex> =
                     ^
compiler/testData/javaModules/dependencyOnStdlib/namedWithoutExplicitDependency/test.kt:5:42: error: symbol is declared in module 'kotlin.stdlib' which current module does not depend on
fun f3(map: Map<Int, Regex>): Collection<Regex> =
                                         ^
compiler/testData/javaModules/dependencyOnStdlib/namedWithoutExplicitDependency/test.kt:6:13: error: symbol is declared in module 'kotlin.stdlib' which current module does not depend on
        map.filterNot { (key, entry) -> "$key".equals(entry.toString(), ignoreCase = true) }.values
            ^
compiler/testData/javaModules/dependencyOnStdlib/namedWithoutExplicitDependency/test.kt:6:26: error: symbol is declared in module 'kotlin.stdlib' which current module does not depend on
        map.filterNot { (key, entry) -> "$key".equals(entry.toString(), ignoreCase = true) }.values
                         ^
compiler/testData/javaModules/dependencyOnStdlib/namedWithoutExplicitDependency/test.kt:6:31: error: symbol is declared in module 'kotlin.stdlib' which current module does not depend on
        map.filterNot { (key, entry) -> "$key".equals(entry.toString(), ignoreCase = true) }.values
                              ^
compiler/testData/javaModules/dependencyOnStdlib/namedWithoutExplicitDependency/test.kt:6:48: error: symbol is declared in module 'kotlin.stdlib' which current module does not depend on
        map.filterNot { (key, entry) -> "$key".equals(entry.toString(), ignoreCase = true) }.values
                                               ^
compiler/testData/javaModules/dependencyOnStdlib/namedWithoutExplicitDependency/test.kt:6:61: error: symbol is declared in module 'kotlin.stdlib' which current module does not depend on
        map.filterNot { (key, entry) -> "$key".equals(entry.toString(), ignoreCase = true) }.values
                                                            ^
COMPILATION_ERROR
